--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "main": "index.js",
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "video.js": "^8.23.4"
+  }
 }
