--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "video.js": "^8.23.4"
+    "video.js": "^8.23.4",
+    "videojs": "^1.0.0"
   }
 }
