--- a/package.json
+++ b/package.json
@@ -1,23 +1,34 @@
 {
-  "name": "top_movies",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "vite": "^7.1.6"
-  },
-  "description": "",
-  "main": "index.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "video.js": "^8.23.4",
-    "videojs": "^1.0.0"
-  }
+    "name": "top_movies",
+    "private": true,
+    "version": "0.0.0",
+    "scripts": {
+        "lint": "eslint . --ext js,jsx,ts,tsx",
+        "format": "prettier --write .",
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview"
+    },
+    "devDependencies": {
+        "eslint": "^9.37.0",
+        "eslint-config-prettier": "^10.1.8",
+        "eslint-plugin-import": "^2.32.0",
+        "eslint-plugin-jsx-a11y": "^6.10.2",
+        "eslint-plugin-prettier": "^5.5.4",
+        "eslint-plugin-react": "^7.37.5",
+        "eslint-plugin-react-hooks": "^6.1.1",
+        "prettier": "^3.6.2",
+        "vite": "^7.1.6"
+    },
+    "description": "",
+    "main": "index.js",
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "format": "^0.2.2",
+        "pretier": "^0.0.1",
+        "video.js": "^8.23.4",
+        "vite-plugin-eslint": "^1.8.1"
+    }
 }
